--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,7 @@
     <string name="confirm_input">Please confirm your password</string>
     <string name="user_input">Please enter your name</string>
     <string name="submit_button">Submit</string>
+    <string name="random">random</string>
 
 
     <string name="hello_world">Hello world!</string>
